готовая версия, нужны картинки

--- a/src/html/chunks/footer.html
+++ b/src/html/chunks/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="footer__logo">
-    <img src="" alt="" />
+    <img src="./img/logo.svg" alt="" />
 
     <p class="footer__logo__copyright">© Все права защищены</p>
 
-    <p class="footer__logo__adress">Орехово-Зуево, 2013-2022</p>
+    <p class="footer__logo__adress">Орехово-Зуево, 2013-2023</p>
   </div>
 
   <div class="footer__social">
