--- a/src/html/chunks/gallery__carousel.html
+++ b/src/html/chunks/gallery__carousel.html
@@ -15,13 +15,25 @@
     </div>
 
     <div class="gallery__carousel__line__element">
-      <img src="./img/gallery__carousel-3.png" alt="" />
+      <img src="./img/gallery__carousel-1.png" alt="" />
+    </div>
+
+    <div class="gallery__carousel__line__element">
+      <img src="./img/gallery__carousel-2.png" alt="" />
     </div>
 
     <div class="gallery__carousel__line__element">
       <img src="./img/gallery__carousel-3.png" alt="" />
     </div>
-    
+
+    <div class="gallery__carousel__line__element">
+      <img src="./img/gallery__carousel-1.png" alt="" />
+    </div>
+
+    <div class="gallery__carousel__line__element">
+      <img src="./img/gallery__carousel-2.png" alt="" />
+    </div>
+
     <div class="gallery__carousel__line__element">
       <img src="./img/gallery__carousel-3.png" alt="" />
     </div>
