--- a/src/html/chunks/subscriptions.html
+++ b/src/html/chunks/subscriptions.html
@@ -1,38 +1,96 @@
 <section class="subscriptions">
-  <table class="subscriptions__table">
-    <thead class="subscriptions__table__head">
-      <tr class="subscriptions__table__head__line">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </thead>
+  <div class="container">
+    <div class="subscriptions__content">
+      <h2 class="subscriptions__content__title">Абонементы</h2>
 
-    <tbody class="subscriptions__table__body">
-      <tr class="subscriptions__table__body__line">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
+      <div class="subscriptions__content__prices">
+        <p>Кол-во занятий</p>
+        <p>1 тренировка</p>
+        <p>4 тренировка</p>
+        <p>8 тренировка</p>
+        <p>12 тренировка</p>
+        <p>Персональный тренинг с инструктором</p>
+        <p>700 руб.</p>
+        <p>2600 руб. (действителен в течении 3 недель)</p>
+        <p>5200 руб. (действителен в течении 6 недель)</p>
+        <p>7200 руб. (действителен в течении 10 недель)</p>
+        <p>Самостоятельные тренировки в тренажерном зале</p>
+        <p>250 руб.</p>
+        <p>—</p>
+        <p>1500 руб. (действителен в течении 30 дней)</p>
+        <p>2000 руб. (действителен в течении 30 дней)</p>
+        <p>Зал групповых программ</p>
+        <p>300 руб.</p>
+        <p>—</p>
+        <p>2000 руб. (действителен в течении 30 дней)</p>
+        <p>2750 руб. (действителен в течении 45 дней)</p>
+      </div>
 
-      <tr class="subscriptions__table__body__line">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
+      <h2 class="subscriptions__content__title">Абонемент по времени</h2>
 
-      <tr class="subscriptions__table__body__line">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
+      <div class="subscriptions__content__prices">
+        <p>Тип карты</p>
+        <p>12 месяцев</p>
+        <p>6 месяцев</p>
+        <p>3 месяца</p>
+        <p>1 месяц</p>
+        <p>Индивидуальная, полная без ограничения в посещении / 8:00 – 23:00</p>
+        <p>18000 (+200 мин. солярия)</p>
+        <p>12000</p>
+        <p>7000</p>
+        <p>2500</p>
+        <p>Индивидуальная, дневная / 8:00 – 17:00</p>
+        <p>—</p>
+        <p>9500</p>
+        <p>5500</p>
+        <p>2000</p>
+      </div>
+
+      <h2 class="subscriptions__content__title">Разовые тренировки</h2>
+
+      <div class="subscriptions__content__cards">
+        <div class="subscriptions__content__cards__element">
+          <h3>Самостоятельные тренировки в тренажерном зале</h3>
+
+          <span>8:00 – 23:00</span>
+
+          <img src="" alt="">
+
+          <p>250₽</p>
+
+          <span>1 тренировка</span>
+
+          <a href="">Узнать</a>
+        </div>
+
+        <div class="subscriptions__content__cards__element">
+          <h3>Самостоятельные тренировки в тренажерном зале</h3>
+
+          <span>8:00 – 23:00</span>
+
+          <img src="" alt="">
+
+          <p>250₽</p>
+
+          <span>1 тренировка</span>
+
+          <a href="">Узнать</a>
+        </div>
+
+        <div class="subscriptions__content__cards__element">
+          <h3>Самостоятельные тренировки в тренажерном зале</h3>
+
+          <span>8:00 – 23:00</span>
+
+          <img src="" alt="">
+
+          <p>250₽</p>
+
+          <span>1 тренировка</span>
+
+          <a href="">Узнать</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
