--- a/src/html/chunks/about.html
+++ b/src/html/chunks/about.html
@@ -18,22 +18,22 @@
 
   <div class="about__features">
     <div class="about__features__element">
-      <img src="" alt="" />
+      <img src="./img/stationary-bike.svg" alt="" />
       <p>Полностью укомплектованный зал</p>
     </div>
 
     <div class="about__features__element">
-      <img src="" alt="" />
+      <img src="./img/dumbbell.svg" alt="" />
       <p>Профессиональное оборудование</p>
     </div>
 
     <div class="about__features__element">
-      <img src="" alt="" />
+      <img src="./img/location.svg" alt="" />
       <p>Удобное расположение в центре города</p>
     </div>
 
     <div class="about__features__element">
-      <img src="" alt="" />
+      <img src="./img/wallet.svg" alt="" />
       <p>Доступная стоимость занятий</p>
     </div>
   </div>
